--- a/src/styles.css
+++ b/src/styles.css
@@ -5,3 +5,19 @@ body,
   margin: 0;
   background: #000000;
 }
+
+#info {
+  position: absolute;
+  top: 125px;
+  left: 10px;
+  background: #181c20;
+  color: #8c92a4;
+  padding: 10px 20px;
+  border-radius: 5px;
+  font-size: 32px;
+  pointer-events: none;
+}
+
+/* div .leva-c-kWgxhW-bCBHqk-fill-false {
+  top: 100px;
+} */
